--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,168 @@
 
-img{
-    width: 150px;
-    height: 150px;
-    margin: 2px;
-}
-.dollieBlair{
-    width: 80%;
-    height: 15%;
-    max-width: 1700px;
-    max-height: 280px;
-    border: 2px solid red;
-}
 body{
+    font-family: "Roboto", sans-serif;
     font-size: 10px;
+    padding-left: 150px;
+    padding-top: 60px;
+    background-color: rgb(245, 243, 243);
+}
+.subImg{
+    border-radius: 40px;
+}
+.video-img{
+    width: 100%;
+    height: 100%;
+    margin: 2px;
+    border-radius: 15px;
+}
+.menuBtnImg, .subImg{
+    width: 20px;
+    height: 20px;
+}
+.side-menu{
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-shrink: 0;
+    left: 0;
+    bottom: 0;
+    top: 60px;
+    width: 150px;
+    z-index: 100;
+}
+.menu-buttons, .main-buttons, .secondary-buttons, .subs{
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.main-buttons{
+    margin-bottom: 40px;
+}
+.menu-button{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    height: 30px;
+    background-color: rgb(245, 243, 243);
+    color: #898989;
+    transition: background-color 0.3s;
+    font-size: 12px;
+}
+.menu-button:hover{
+    background-color: rgb(189, 189, 189);
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+}
+.menu-button img{
+    margin-right: 5px;
+}
+.head-menu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: fixed;
+    background-color: rgb(197, 105, 105);
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    z-index: 100;
+}
+.videos{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+    align-items: center;
+}
+.recommended .videos{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 20px;
+}
+.recommended .videos .yt-video{
+ 
+}
+.recommended .videos .yt-video .video-preview{
+    width: 540px;
+}
+
+.video-preview{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 150px;
+}
+.video-time{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 10px;
+    right: 15px;
+    background-color: #00000030;
+    border-radius: 14px;
+    width:32px;
+    height: 16px;
+    font-weight: 500;
+    color: white;
+}
+
+.recommended{
+    height: 40%;
+}
+
+.video-description{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+}
+.video-title{
+    font-weight: bold;
+    grid-area: 2/1/1/2;
+}
+.video-info, .video-author{
+    color: #C2C2C2;
+}
+.video-info{
+    grid-area: 2/1/2/1;
+}
+.video-author{
+    display: flex;
+    justify-content: flex-end;
+    grid-area: 2/2/2/2;
+}
+
+@media (max-width:768px){
+    body{
+        padding-left: 0px;
+        padding-top: 60px;
+        padding-bottom: 50px;
+    }
+    .side-menu{
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top:auto;
+        width: auto;
+        height: 50px;
+        margin-bottom: -20px;
+    }
+    .secondary-buttons, .subs, aside.menu-button{
+        display: none;
+    }
+    .main-buttons{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
