--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,12 @@ body{
     font-size: 10px;
     padding-left: 150px;
     padding-top: 60px;
+    padding-bottom: 2000px;
     background-color: rgb(245, 243, 243);
 }
 .subImg{
     border-radius: 40px;
-}
-.video-img{
-    width: 100%;
-    height: 100%;
-    margin: 2px;
-    border-radius: 15px;
+
 }
 .menuBtnImg, .subImg{
     width: 20px;
@@ -62,6 +58,12 @@ body{
 .menu-button img{
     margin-right: 5px;
 }
+.video-title{
+    font-weight: bold;
+}
+.video-info, .video-author{
+    color: #C2C2C2;
+}
 .head-menu{
     display: flex;
     align-items: center;
@@ -84,22 +86,20 @@ body{
 .recommended .videos{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-left: 20px;
 }
 .recommended .videos .yt-video{
- 
+    flex:1;
+    border: 1px solid red;
 }
-.recommended .videos .yt-video .video-preview{
-    width: 540px;
+.video-img{
+    width: 200px;
+    height: 200px;
+    max-width: 250px;
+    max-height: 250px;
+    margin: 2px;
 }
-
 .video-preview{
     position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
-    height: 150px;
 }
 .video-time{
     display: flex;
@@ -115,32 +115,14 @@ body{
     font-weight: 500;
     color: white;
 }
-
+.dollieBlair, .foodAndDrinks, .recommended{
+    height: 20%;
+    max-width: 1700px;
+}
 .recommended{
     height: 40%;
 }
 
-.video-description{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-}
-.video-title{
-    font-weight: bold;
-    grid-area: 2/1/1/2;
-}
-.video-info, .video-author{
-    color: #C2C2C2;
-}
-.video-info{
-    grid-area: 2/1/2/1;
-}
-.video-author{
-    display: flex;
-    justify-content: flex-end;
-    grid-area: 2/2/2/2;
-}
 
 @media (max-width:768px){
     body{
